// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clear renders 0 1`] = `
Array [
  .c0 {
  clear: 0;
}

<div
    className="c0"
  />,
  .c0 {
  clear: 0;
}

<div
    className="c0"
  />,
  .c0 {
  clear: 0;
}

<div
    className="c0"
  />,
  .c0 {
  clear: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`clear renders function 1`] = `
Array [
  .c0 {
  clear: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  clear: has;
}

<div
    className="c0"
  />,
  .c0 {
  clear: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  clear: has;
}

<div
    className="c0"
  />,
]
`;

exports[`clear renders invalid theme path 1`] = `
Array [
  .c0 {
  clear: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  clear: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  clear: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  clear: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`clear renders negative number 1`] = `
Array [
  .c0 {
  clear: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  clear: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  clear: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  clear: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`clear renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    clear: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    clear: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    clear: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    clear: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    clear: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    clear: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    clear: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    clear: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    clear: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    clear: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    clear: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    clear: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    clear: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    clear: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    clear: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    clear: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`clear renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    clear: July;
  }
}

@media April {
  .c0 {
    clear: August;
  }
}

@media January {
  .c0 {
    clear: September;
  }
}

@media April {
  .c0 {
    clear: November;
  }
}

@media June {
  .c0 {
    clear: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    clear: July;
  }
}

@media April {
  .c0 {
    clear: August;
  }
}

@media January {
  .c0 {
    clear: September;
  }
}

@media April {
  .c0 {
    clear: November;
  }
}

@media June {
  .c0 {
    clear: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    clear: January;
  }
}

@media April {
  .c0 {
    clear: December;
  }
}

@media January {
  .c0 {
    clear: April;
  }
}

@media April {
  .c0 {
    clear: May;
  }
}

@media June {
  .c0 {
    clear: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    clear: January;
  }
}

@media April {
  .c0 {
    clear: December;
  }
}

@media January {
  .c0 {
    clear: April;
  }
}

@media April {
  .c0 {
    clear: May;
  }
}

@media June {
  .c0 {
    clear: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`clear renders postitive number 1`] = `
Array [
  .c0 {
  clear: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  clear: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  clear: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  clear: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`clear renders string 1`] = `
Array [
  .c0 {
  clear: July;
}

<div
    className="c0"
  />,
  .c0 {
  clear: July;
}

<div
    className="c0"
  />,
  .c0 {
  clear: June;
}

<div
    className="c0"
  />,
  .c0 {
  clear: June;
}

<div
    className="c0"
  />,
]
`;

exports[`clear renders valid theme path 1`] = `
Array [
  .c0 {
  clear: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  clear: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  clear: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  clear: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
